--- a/src/utils/Calendar/Calendar.scss
+++ b/src/utils/Calendar/Calendar.scss
@@ -2,7 +2,7 @@
 
     .react-calendar__navigation {
         .react-calendar__navigation__arrow {
-            display: none;
+            display: block;
         }
     
         .react-calendar__navigation__label {
@@ -20,7 +20,7 @@
     }
     
     .react-calendar__tile--active {
-        background: #e70220;
+        background-color: #FFFFFF;
         color: white;
     }
     
@@ -33,4 +33,4 @@
     .react-calendar__month-view__days__day {
         font-size: 18px;
     }
-    }
+}
